--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
-    "express-basic-auth": "^1.2.1",
-    "helmet": "^5.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "express-basic-auth": "^1.2.1",
+    "helmet": "^5.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -39,6 +40,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
